--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 DATABASE_URL=mongodb+srv://apex:apexnew@apex.kmfgtcb.mongodb.net/apex?retryWrites=true&w=majority
 JWT_SECRET=apex-secret
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyBxM6OMLUUAOOmkqjopt6K1ezOk5VtglKU
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=apexcel-832c6.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=apexcel-832c6
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=apexcel-832c6.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=989712361540
+NEXT_PUBLIC_FIREBASE_APP_ID=1:989712361540:web:e3157556875fd61697f411
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-RFPQRE8YKB
