--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.15.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.9",
@@ -24,9 +26,15 @@
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "firebase": "^12.2.1",
     "flatpickr": "^4.6.13",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.542.0",
     "next": "15.2.3",
+    "pdfkit": "^0.17.2",
     "prisma": "^6.15.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
@@ -34,6 +42,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.62.0",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0",
     "tsparticles": "^3.9.1"
@@ -51,6 +60,7 @@
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "tailwindcss": "^4.0.0",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   },
   "overrides": {
