--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/postcss": "^4.0.9",
     "@tsparticles/react": "^3.0.0",
+    "@types/mime-types": "^3.0.1",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.2.1",
@@ -33,6 +35,7 @@
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.542.0",
+    "mime-types": "^3.0.1",
     "next": "15.2.3",
     "pdfkit": "^0.17.2",
     "prisma": "^6.15.0",
